h5c3js: basics of tag i.e attribute

--- a/week-4/day-2/html-basics/index.html
+++ b/week-4/day-2/html-basics/index.html
@@ -6,5 +6,8 @@
 
         <img src="https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png">
 
+        <a href="https://google.com"> Go To Google </a>
+
+        <input type="text" disabled>
     </body>
 </html>
