h5csjs: basics of html page

--- a/week-4/day-2/html-basics/index.html
+++ b/week-4/day-2/html-basics/index.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
 <html>
-    <title>Hello World To ABC</title>
+
+    <head>
+        <title>Hello World To ABC</title>
+        <meta charset="utf-8">
+    </head>
+
     <body>
-        skfksfhfgkdfhgkdgh 
+        skfksfhfgkdfhgkdgh
         <p> <strong>android</strong> appp development</p>
 
         <img src="https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png">
@@ -9,5 +15,28 @@
         <a href="https://google.com"> Go To Google </a>
 
         <input type="text" disabled>
+
+        <select>
+            <option value="IN">India</option>
+            <option value="JP">Japan</option>
+            <option value="RS">Russia</option>
+            <option value="US">USA</option>
+        </select>
+        <p>
+            न जाने क्या हुआ
+            कल एक राजा नींद में चिल्ला उठा
+            मंत्रियों! मुझे लोकगाथाओं में जगह चाहिए
+            चिन्तित हुए सारे मंत्री
+            अधिकारी हैरान
+            जिसके पास पुलिस है असंख्य सेना है
+            जलदुर्ग, थलदुर्ग जिसके पास चौंसठ किले हैं
+        </p>
+        <p>
+            'ರಿ' ಇಂದ ಅಂತ್ಯಗೊಳ್ಳುವ ಪದಗಳನ್ನೆಲ್ಲ ಹುಡುಕಿ ಒಂದು ಅರ್ಥಪೂರ್ಣ ಪದ್ಯ ರಚಿಸಿಕೊಡುವ ಪ್ರಯತ್ನ ಮಾಡಲಾಗಿದೆ.
+        </p>
+        <p>
+            😀 😃 😄 😁 😆 😅 😂 🤣 🥲 ☺️ 😊 😇 🙂 🙃 😉
+        </p>
     </body>
+
 </html>
