h5c3js : tags ol and ul

--- a/week-4/day-2/html-basics/tags-intro.html
+++ b/week-4/day-2/html-basics/tags-intro.html
@@ -7,20 +7,37 @@
     </head>
 
     <body>
-        <table border="1">
-            <tr>
-                <th>Month</th>
-                <th>Savings</th>
-            </tr>
-            <tr>
-                <td>Jan</td>
-                <td>15000</td>
-            </tr>
-            <tr>
-                <td>Feb</td>
-                <td>30000</td>
-            </tr>
-        </table>
+        <div>
+            <table border="1">
+                <tr>
+                    <th>Month</th>
+                    <th>Savings</th>
+                </tr>
+                <tr>
+                    <td>Jan</td>
+                    <td>15000</td>
+                </tr>
+                <tr>
+                    <td>Feb</td>
+                    <td>30000</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <ol>
+                <li> abc </li>
+                <li> pqr </li>
+                <li> lmn </li>
+            </ol>
+        </div>
+
+        <div>
+            <ul>
+                <li> abc </li>
+                <li> pqr </li>
+                <li> lmn </li>
+            </ul>
+        </div>
     </body>
 
 </html>
