h5c3js : css selectors

--- a/week-4/day-2/css-basics/basics.html
+++ b/week-4/day-2/css-basics/basics.html
@@ -17,7 +17,7 @@
 
     <body>
         <!-- Inline CSS -->
-        <div style="border: 1px solid red; height: 150px;">
+        <div class="dvThd" style="border: 1px solid red; height: 150px;">
             First Div
         </div>
 
