--- a/week-4/day-2/css-basics/dimens.html
+++ b/week-4/day-2/css-basics/dimens.html
@@ -21,6 +21,8 @@
             <div class="box em">I am 10em wide</div>
         </div>
 
+        <div class="box3"></div>
+
     </body>
 
 </html>
