h5c3js : css3 hover assignment

--- a/week-4/day-2/css-basics/basics.html
+++ b/week-4/day-2/css-basics/basics.html
@@ -13,6 +13,7 @@
         </style>
 
         <link rel="stylesheet" href="basics.css">
+        <link rel="stylesheet" href="hover.css">
     </head>
 
     <body>
@@ -26,6 +27,9 @@
 
         <!-- External Css -->
         <div class="dvThd"> Third Div </div>
+
+        <div class="dvHvr"> </div>
     </body>
+
 
 </html>
