h5c3js : gird more details

--- a/week-4/day-3/grid-basics/basics.html
+++ b/week-4/day-3/grid-basics/basics.html
@@ -12,6 +12,39 @@
             <div class="back"></div>
             <div class="back"></div>
             <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
+            <div class="back"></div>
         </div>
     </body>
 
