h5c3js : grid and flex

--- a/week-4/day-3/simple-grid-usecase/index.html
+++ b/week-4/day-3/simple-grid-usecase/index.html
@@ -11,8 +11,18 @@
 
     <body>
         <div class="container">
-            <div class="main"></div>
-            <div class="info1"></div>
+            <div class="main">
+                <h1>Wecome to Python Full Stack</h1>
+            </div>
+            <div class="info1">
+                <div>
+                    <p>World</p>
+                    <h3>Featured Post</h3>
+                    <p>Nov 12</p>
+
+                </div>
+                <div></div>
+            </div>
             <div class="info2"></div>
             <div class="details"></div>
             <div class="side"></div>
