--- a/week-4/day-4/js-basics/index.html
+++ b/week-4/day-4/js-basics/index.html
@@ -22,6 +22,7 @@
 
         <script src="app.js"></script>
         <script src="fn.js"></script>
+        <script src="loops.js"></script>
     </body>
 
 </html>
