h5c3js : dom basics

--- a/week-4/day-4/dom-basics/index.html
+++ b/week-4/day-4/dom-basics/index.html
@@ -9,18 +9,12 @@
     </head>
 
     <body>
-        
-
-        <script>
-            var a = 20
-            var b = 30
-            console.log('Addition  is ' + (a + b))
-
-        </script>
+        <div>
+            <h1 id="ttl"> Text Of H1 </h1>
+            <input id="btn" type="button" value="Okay">
+        </div>
 
         <script src="app.js"></script>
-        <script src="fn.js"></script>
-        <script src="loops.js"></script>
     </body>
 
 </html>
