h5c3js : dom css access

--- a/week-4/day-4/dom-basics/index.html
+++ b/week-4/day-4/dom-basics/index.html
@@ -13,7 +13,16 @@
             <h1 id="ttl"> Text Of H1 </h1>
             <input id="btn" type="button" value="Okay">
         </div>
+        <div>
+            <input id="redBtn" type="button" value="Red">
+            <input id="greenBtn" type="button" value="Green">
+            <input id="blueBtn" type="button" value="Blue">
+        </div>
 
+        <div>
+            <input id="showBtn" type="button" value="Show">
+            <input id="hideBtn" type="button" value="Hide">
+        </div>
         <script src="app.js"></script>
     </body>
 
