h5c3js : js calculator

--- a/week-4/day-4/calculator/index.html
+++ b/week-4/day-4/calculator/index.html
@@ -10,7 +10,21 @@
     </head>
 
     <body>
-
+        <div class="calc">
+            <div class="result">
+                <h4 id="res"> Result Is : </h4>
+            </div>
+            <div class="inps">
+                <input id="num1" type="text" placeholder="Num1">
+                <input id="num2" type="text" placeholder="Num2">
+            </div>
+            <div class="btns">
+                <input id="btAd" type="button" value="Add">
+                <input id="btSb" type="button" value="Sub">
+                <input id="btMl" type="button" value="Mul">
+                <input id="btDv" type="button" value="Div">
+            </div>
+        </div>
         <script src="app.js"></script>
     </body>
 
