h5c3js : dom delete chaild

--- a/week-4/day-4/dom-2/index.html
+++ b/week-4/day-4/dom-2/index.html
@@ -10,10 +10,15 @@
     </head>
 
     <body>
+
         <div class="cont">
             <ol id="mbs">
 
             </ol>
+            <div>
+                <input type="button" value="Delete" id="btDl">
+            </div>
+
         </div>
 
         <script src="app.js"></script>
